# orbit_simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/core/planet/: planet.h
src/core/simulation/: simulation.cpp  simulation.h
src/core/solar_system/: solar_system.cpp  solar_system.h
src/entities/planet/: planet.cpp  planet.h
src/entities/planet_collection/: planet_collection.cpp  planet_collection.h
src/entities/solar_system/: solar_system.cpp  solar_system.h
src/helpers/raylib/: raylib_helper.cpp  raylib_helper.h
src/utils/coordinates/: coordinate.cpp  coordinate.h
